HG-6 fix top menu z-index

--- a/local/templates/hogart/styles.less
+++ b/local/templates/hogart/styles.less
@@ -34,3 +34,9 @@
     }
   }
 }
+
+.breadcrumbs {
+  span:last-child {
+    color: @brand-green;
+  }
+}
